デベロッパーツールを別ウィンドウで起動させておくのは邪魔なので、ブラウザ内に疲労度を表示するようにした

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,12 @@
 	"background": {
 		"scripts": ["background.js"]
 	},
+	"content_scripts": [
+		{
+			"matches": ["http://www.dmm.com/netgame/social/-/gadgets/=/app_id=854854/"],
+			"js": ["content.js"]
+		}
+	],
 	"devtools_page": "devtools.html",
 	"permissions": [
 		"webRequest",
