以前はbackground.jsでchrome.webRequestを使っての機能実現を試みていたが、devtools_pageを使うことになったので、permissionsは意味がなくなった

--- a/manifest.json
+++ b/manifest.json
@@ -12,10 +12,6 @@
 			"js": ["content.js"]
 		}
 	],
-	"devtools_page": "devtools.html",
-	"permissions": [
-		"webRequest",
-		"http://*/kcsapi/api_get_member/ship2"
-	]
+	"devtools_page": "devtools.html"
 }
 
