安定したので v1.0 とする.

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,10 @@
 {
 	"manifest_version": 2,
 	"name": "KanColle-YPS",
-	"version": "0.0.4",
+	"version": "1.0.0",
+	"version_name": "v1.0 Dec.2015",
 	"description": "艦これの余所見プレイを支援する(cond_checker改造版)",
+	"homepage_url": "http://hkuno9000.github.io/KanColle-YPS/",
 	"permissions": [
 		"storage"
 	],
